Добавила новый div

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <p>This is a test page for our team to play with.</p>
     </div>
 
+    <div>
+        <p>Привет! Меня зовут Асема.</p>
+    </div>
+
     <!-- Задание для участников:
     1. Клонируйте этот репозиторий себе на компьютер.
     2. Создайте в этом html-файле еще один <div>
