--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-        <p>Привет! Меня зовут Асема.</p>
+        <p>Привет! Меня зовут Асемa.</p>
     </div>
 
     <!-- Задание для участников:
