--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div>
         <p>Привет! Меня зовут Асемa.</p>
-        <p>Привет! Меня зовут от Наташи.</p>
+        <p>Привет! Меня зовут Наташа</p>
     </div>
 
     <!-- Задание для участников:
