--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-        <p>Привет! Меня зовут Асемa.</p>
+        <p>Привет! Меня зовут Асемa (через букву Е - мягко)</p>
         <p>Привет! Меня зовут Наташа</p>
     </div>
 
